tutorials are only available in the IDE version http://bugs.activestate.com/show_bug.cgi?id=80274 also fixing version_alert vertical alignment
git-svn-id: http://svn.openkomodo.com/repos/komododoc/trunk@2423 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/en-US/css/aspn.css
+++ b/en-US/css/aspn.css
@@ -365,7 +365,6 @@ ul.sans
         
 .version_alert {
     font-size: small;
-    vertical-align: middle;
     margin-left: 2em;
     color: #777;
 }
